# lineartrader

./: README.md  pyproject.toml
lineartrader/: first_shot.py
