[tool.poetry]
name = "lineartrader"
version = "0.1.0"
description = "A program for the linear optimization of different trading opportunities"
authors = ["Eike Fokken <e.fokken+github@posteo.de>"]
license = "AGPL-3+"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.14"
casadi = "^3.6.7"
click = "^8.1.7"


[tool.isort]
profile = "black"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
importmagic = "^0.1.7"
epc = "^0.0.5"
mypy = "^1.13.0"
python-lsp-server = {extras = ["all"], version = "^1.12.0"}
pylsp-mypy = "^0.6.9"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
